apps/app-server/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-server
spec:
  selector:
    app: app-server
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
